--- a/usługi-dach-system.html
+++ b/usługi-dach-system.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4069437331"/>
-  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=3793162925" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=3905328135" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3956889806"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=409187111" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=525068673" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -78,50 +78,50 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="TabbedPanelsContentGroup clearfix colelem" id="u21419"><!-- stack box -->
-       <div class="TabbedPanelsContent invi clearfix grpelem" id="u21429"><!-- group -->
-        <div class="clearfix grpelem shared_content" id="u21432-38" data-content-guid="u21432-38_content"><!-- content -->
-         <p id="u21432-2">Oferujemy krycie dachów papą termozgrzewalną, docieplanie dachów płaskich styropapą, styropianem lub wełną, izolację fundamentów i posadzek papą, wszystkie warstwy niezbędne pod dachy zielone. Kompletne systemy dachowe z wieloletnią gwarancją producenta.</p>
-         <p id="u21432-3">&nbsp;</p>
-         <p id="u21432-5">Posiadam kilkuletnie doświadczenie jako instruktor ds. aplikacji papy u jednego z czołowych producentów papy w kraju.</p>
-         <p id="u21432-6">&nbsp;</p>
-         <p id="u21432-8">Materiały prosto od producenta bez pośredników.</p>
-         <p id="u21432-9">&nbsp;</p>
-         <p id="u21432-11">Wykonujemy również obróbki blacharskie.</p>
-         <p id="u21432-12">&nbsp;</p>
-         <p id="u21432-14">W ofercie posiadamy wiele rodzajów pap podkładowych i nawierzchniowych. Papy nawierzchniowe o grubości 5,2mm- porządne i trwałe - na wiele lat.</p>
-         <p id="u21432-15">&nbsp;</p>
-         <p id="u21432-17">Specjalizujemy się w remontach dachów płaskich. Domy, hale, magazyny, garaże, wiaty, budynki gospodarcze, altanki itp.</p>
-         <p id="u21432-18">&nbsp;</p>
-         <p id="u21432-20">Działamy głównie na terenie województwa lubuskiego ale także: wielkopolskiego, dolnośląskiego i zachodniopomorskiego - proszę śmiało dzwonić, jeśli mamy wolny termin dojazd nie jest problemem.</p>
-         <p id="u21432-21">&nbsp;</p>
-         <p id="u21432-23">Likwidujemy także przecieki oraz obrabiamy prawidłowo papą elementy takie jak: kominy czy ogniomury. Potrafimy uratować nawet najbardziej zaniedbany dach.</p>
-         <p id="u21432-24">&nbsp;</p>
-         <p id="u21432-26">Gwarantujemy profesjonalne wykonanie i brak przecieków.</p>
-         <p id="u21432-27">&nbsp;</p>
-         <p id="u21432-29">Nie sprzedajemy papy osobno, tylko usługa z materiałem.</p>
-         <p id="u21432-30">&nbsp;</p>
-         <p id="u21432-32">Wyceny, doradztwo techniczne - o papie i jej rodzajach wiemy wszystko. Większość wycen można dokonać po rozmowie telefonicznej na podstawie przekazanych danych lub ewentualnie zdjęcia dachu. Należy znać powierzchnię dachu, rodzaj pokrycia oraz ilość obróbek takich jak kominy, attyki itp.</p>
-         <p id="u21432-33">&nbsp;</p>
-         <p id="u21432-35">Zapraszamy do współpracy.</p>
-         <p id="u21432-36">&nbsp;</p>
+       <div class="TabbedPanelsContent clearfix grpelem" id="u21429"><!-- column -->
+        <div class="clearfix colelem shared_content" id="pu21432-38" data-content-guid="pu21432-38_content"><!-- group -->
+         <div class="clearfix grpelem" id="u21432-38"><!-- content -->
+          <p id="u21432-2">Oferujemy krycie dachów papą termozgrzewalną, docieplanie dachów płaskich styropapą, styropianem lub wełną, izolację fundamentów i posadzek papą, wszystkie warstwy niezbędne pod dachy zielone. Kompletne systemy dachowe z wieloletnią gwarancją producenta.</p>
+          <p id="u21432-3">&nbsp;</p>
+          <p id="u21432-5">Posiadam kilkuletnie doświadczenie jako instruktor ds. aplikacji papy u jednego z czołowych producentów papy w kraju.</p>
+          <p id="u21432-6">&nbsp;</p>
+          <p id="u21432-8">Materiały prosto od producenta bez pośredników.</p>
+          <p id="u21432-9">&nbsp;</p>
+          <p id="u21432-11">Wykonujemy również obróbki blacharskie.</p>
+          <p id="u21432-12">&nbsp;</p>
+          <p id="u21432-14">W ofercie posiadamy wiele rodzajów pap podkładowych i nawierzchniowych. Papy nawierzchniowe o grubości 5,2mm- porządne i trwałe - na wiele lat.</p>
+          <p id="u21432-15">&nbsp;</p>
+          <p id="u21432-17">Specjalizujemy się w remontach dachów płaskich. Domy, hale, magazyny, garaże, wiaty, budynki gospodarcze, altanki itp.</p>
+          <p id="u21432-18">&nbsp;</p>
+          <p id="u21432-20">Działamy głównie na terenie województwa lubuskiego ale także: wielkopolskiego, dolnośląskiego i zachodniopomorskiego - proszę śmiało dzwonić, jeśli mamy wolny termin dojazd nie jest problemem.</p>
+          <p id="u21432-21">&nbsp;</p>
+          <p id="u21432-23">Likwidujemy także przecieki oraz obrabiamy prawidłowo papą elementy takie jak: kominy czy ogniomury. Potrafimy uratować nawet najbardziej zaniedbany dach.</p>
+          <p id="u21432-24">&nbsp;</p>
+          <p id="u21432-26">Gwarantujemy profesjonalne wykonanie i brak przecieków.</p>
+          <p id="u21432-27">&nbsp;</p>
+          <p id="u21432-29">Nie sprzedajemy papy osobno, tylko usługa z materiałem.</p>
+          <p id="u21432-30">&nbsp;</p>
+          <p id="u21432-32">Wyceny, doradztwo techniczne - o papie i jej rodzajach wiemy wszystko. Większość wycen można dokonać po rozmowie telefonicznej na podstawie przekazanych danych lub ewentualnie zdjęcia dachu. Należy znać powierzchnię dachu, rodzaj pokrycia oraz ilość obróbek takich jak kominy, attyki itp.</p>
+          <p id="u21432-33">&nbsp;</p>
+          <p id="u21432-35">Zapraszamy do współpracy.</p>
+          <p id="u21432-36">&nbsp;</p>
+         </div>
+         <div class="clearfix grpelem" id="pu21917"><!-- column -->
+          <div class="museBGSize colelem" id="u21917"><!-- content -->
+           <div class="fluid_height_spacer"></div>
+          </div>
+          <div class="museBGSize colelem" id="u21933"><!-- content -->
+           <div class="fluid_height_spacer"></div>
+          </div>
+          <div class="museBGSize colelem" id="u21959"><!-- content -->
+           <div class="fluid_height_spacer"></div>
+          </div>
+          <div class="museBGSize colelem" id="u22065"><!-- content -->
+           <div class="fluid_height_spacer"></div>
+          </div>
+         </div>
         </div>
-        <div class="clearfix grpelem shared_content" id="pu21917" data-content-guid="pu21917_content"><!-- column -->
-         <div class="museBGSize colelem" id="u21917"><!-- content -->
-          <div class="fluid_height_spacer"></div>
-         </div>
-         <div class="museBGSize colelem" id="u21933"><!-- content -->
-          <div class="fluid_height_spacer"></div>
-         </div>
-         <div class="museBGSize colelem" id="u21959"><!-- content -->
-          <div class="fluid_height_spacer"></div>
-         </div>
-        </div>
-        <div class="clearfix grpelem shared_content" id="pu22065" data-content-guid="pu22065_content"><!-- column -->
-         <div class="museBGSize colelem" id="u22065"><!-- content -->
-          <div class="fluid_height_spacer"></div>
-         </div>
-         <a class="nonblock nontext anim_swing transition shadow clearfix colelem" id="u24400-4" href="us%c5%82ugi-dach-system.html#top"><!-- content --><p id="u24400-2"><span id="u24400">SPRAWDŹ INNE USŁUGI</span></p></a>
-        </div>
+        <a class="nonblock nontext anim_swing transition shadow clearfix colelem shared_content" id="u24400-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24400-4_content"><!-- content --><p id="u24400-2"><span id="u24400">SPRAWDŹ INNE USŁUGI</span></p></a>
        </div>
        <div class="TabbedPanelsContent invi clearfix grpelem" id="u21420"><!-- column -->
         <div class="clearfix colelem shared_content" id="pu21421-10" data-content-guid="pu21421-10_content"><!-- group -->
@@ -143,7 +143,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <a class="nonblock nontext anim_swing transition shadow clearfix colelem shared_content" id="u24426-4" href="us%c5%82ugi-dach-system.html#top" data-content-guid="u24426-4_content"><!-- content --><p id="u24426-2"><span id="u24426">SPRAWDŹ INNE USŁUGI</span></p></a>
        </div>
-       <div class="TabbedPanelsContent clearfix grpelem" id="u21424"><!-- column -->
+       <div class="TabbedPanelsContent invi clearfix grpelem" id="u21424"><!-- column -->
         <div class="clearfix colelem shared_content" id="pu22280-10" data-content-guid="pu22280-10_content"><!-- group -->
          <div class="clearfix grpelem" id="u22280-10"><!-- content -->
           <p id="u22280-2">Dokładamy wszelkich starań aby efekt finalny był zadowalający przede wszystkim pod względem szczelności ale także wizualnym.</p>
@@ -186,7 +186,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1884" data-content-above-spacer="1884" data-content-below-spacer="274" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="3034" data-content-above-spacer="3033" data-content-below-spacer="363" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_1366" data-min-width="1025" data-max-width="1366"><!-- responsive breakpoint node -->
@@ -224,16 +224,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
        <div class="TabbedPanelsContentGroup clearfix colelem temp_no_id" data-orig-id="u21419"><!-- stack box -->
-        <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21429"><!-- group -->
-         <span class="clearfix grpelem placeholder" data-placeholder-for="u21432-38_content"><!-- placeholder node --></span>
-         <span class="clearfix grpelem placeholder" data-placeholder-for="pu21917_content"><!-- placeholder node --></span>
-         <span class="clearfix grpelem placeholder" data-placeholder-for="pu22065_content"><!-- placeholder node --></span>
+        <div class="TabbedPanelsContent clearfix grpelem temp_no_id" data-orig-id="u21429"><!-- column -->
+         <span class="clearfix colelem placeholder" data-placeholder-for="pu21432-38_content"><!-- placeholder node --></span>
+         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24400-4_content"><!-- placeholder node --></span>
         </div>
         <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21420"><!-- column -->
          <span class="clearfix colelem placeholder" data-placeholder-for="pu21421-10_content"><!-- placeholder node --></span>
          <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24426-4_content"><!-- placeholder node --></span>
         </div>
-        <div class="TabbedPanelsContent clearfix grpelem temp_no_id" data-orig-id="u21424"><!-- column -->
+        <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21424"><!-- column -->
          <span class="clearfix colelem placeholder" data-placeholder-for="pu22280-10_content"><!-- placeholder node --></span>
          <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24444-4_content"><!-- placeholder node --></span>
         </div>
@@ -244,7 +243,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <div class="verticalspacer" data-offset-top="1468" data-content-above-spacer="1468" data-content-below-spacer="201" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+     <div class="verticalspacer" data-offset-top="2358" data-content-above-spacer="2358" data-content-below-spacer="201" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     </div>
    </div>
   </div>
@@ -278,16 +277,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
       <div class="TabbedPanelsContentGroup clearfix colelem temp_no_id" data-orig-id="u21419"><!-- stack box -->
-       <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21429"><!-- group -->
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u21432-38_content"><!-- placeholder node --></span>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="pu21917_content"><!-- placeholder node --></span>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="pu22065_content"><!-- placeholder node --></span>
+       <div class="TabbedPanelsContent clearfix grpelem temp_no_id" data-orig-id="u21429"><!-- column -->
+        <span class="clearfix colelem placeholder" data-placeholder-for="pu21432-38_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24400-4_content"><!-- placeholder node --></span>
        </div>
        <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21420"><!-- column -->
         <span class="clearfix colelem placeholder" data-placeholder-for="pu21421-10_content"><!-- placeholder node --></span>
         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24426-4_content"><!-- placeholder node --></span>
        </div>
-       <div class="TabbedPanelsContent clearfix grpelem temp_no_id" data-orig-id="u21424"><!-- column -->
+       <div class="TabbedPanelsContent invi clearfix grpelem temp_no_id" data-orig-id="u21424"><!-- column -->
         <span class="clearfix colelem placeholder" data-placeholder-for="pu22280-10_content"><!-- placeholder node --></span>
         <span class="nonblock nontext anim_swing transition shadow clearfix colelem placeholder" data-placeholder-for="u24444-4_content"><!-- placeholder node --></span>
        </div>
@@ -298,7 +296,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1206" data-content-above-spacer="1206" data-content-below-spacer="213" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1808" data-content-above-spacer="1808" data-content-below-spacer="213" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="breakpoint" id="bp_881" data-min-width="571" data-max-width="881"><!-- responsive breakpoint node -->
@@ -557,7 +555,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('#tab-panelu21401', ['#bp_infinity', '#bp_1366', '#bp_1024'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:2}); });/* #tab-panelu21401 */
+Muse.Utils.initWidget('#tab-panelu21401', ['#bp_infinity', '#bp_1366', '#bp_1024'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:0}); });/* #tab-panelu21401 */
 Muse.Utils.initWidget('#tab-panelu22722', ['#bp_881', '#bp_570', '#bp_320'], function(elem) { return new WebPro.Widget.TabbedPanels(elem, {event:'click',defaultIndex:3}); });/* #tab-panelu22722 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
