--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Start Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=409669044"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4253935030" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=515608576"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3824907992" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3956889806"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=30467253" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3850453687"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=215943770" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -135,21 +135,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1915" data-content-above-spacer="1915" data-content-below-spacer="370" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1915" data-content-above-spacer="1915" data-content-below-spacer="402" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u36093" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u36093_content"><!-- content --></a>
-    <div class="clearfix grpelem shared_content" id="u36102-21" data-content-guid="u36102-21_content"><!-- content -->
-     <p id="u36102-2">ADRES</p>
-     <p id="u36102-3">&nbsp;</p>
-     <p id="u36102-5">UL. STASZICA 3C/7</p>
-     <p id="u36102-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
-     <p id="u36102-8">&nbsp;</p>
-     <p id="u36102-10">TELEFON</p>
-     <p id="u36102-11">&nbsp;</p>
-     <p id="u36102-13">516 545 989</p>
-     <p id="u36102-14">&nbsp;</p>
-     <p id="u36102-16">NIP</p>
-     <p id="u36102-17">&nbsp;</p>
-     <p id="u36102-19"><span id="u36102-18">596-161-51-36</span></p>
+    <div class="clearfix grpelem shared_content" id="pu36102-21" data-content-guid="pu36102-21_content"><!-- column -->
+     <div class="clearfix colelem shared_content" id="u36102-21" data-content-guid="u36102-21_content"><!-- content -->
+      <p id="u36102-2">ADRES</p>
+      <p id="u36102-3">&nbsp;</p>
+      <p id="u36102-5">UL. STASZICA 3C/7</p>
+      <p id="u36102-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
+      <p id="u36102-8">&nbsp;</p>
+      <p id="u36102-10">TELEFON</p>
+      <p id="u36102-11">&nbsp;</p>
+      <p id="u36102-13">516 545 989</p>
+      <p id="u36102-14">&nbsp;</p>
+      <p id="u36102-16">NIP</p>
+      <p id="u36102-17">&nbsp;</p>
+      <p id="u36102-19"><span id="u36102-18">596-161-51-36</span></p>
+     </div>
+     <div class="clearfix colelem shared_content" id="u37206-4" data-content-guid="u37206-4_content"><!-- content -->
+      <p>Design: Robert Chomiak</p>
+     </div>
     </div>
     <div class="clearfix grpelem shared_content" id="u36094" data-content-guid="u36094_content"><!-- column -->
      <a class="nonblock nontext MuseLinkActive clearfix colelem shared_content" id="u36095-4" href="index.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u36095-4_content"><!-- content --><p id="u36095-2">START</p></a>
@@ -203,9 +208,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="pu6186_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu4875_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="1496" data-content-above-spacer="1495" data-content-below-spacer="319" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1496" data-content-above-spacer="1495" data-content-below-spacer="366" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u36093_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36102-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36102-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36094_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -259,9 +264,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1144" data-content-above-spacer="1144" data-content-below-spacer="301" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1144" data-content-above-spacer="1144" data-content-below-spacer="368" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u36093_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36102-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36102-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36094_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -319,7 +324,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1335" data-content-above-spacer="1334" data-content-below-spacer="615" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1335" data-content-above-spacer="1334" data-content-below-spacer="663" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu36093"><!-- column -->
      <span class="nonblock nontext MuseLinkActive museBGSize colelem placeholder" data-placeholder-for="u36093_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36102-21_content"><!-- placeholder node --></span>
@@ -335,6 +340,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <span class="nonblock nontext transition clearfix grpelem placeholder" data-placeholder-for="u36097-4_content"><!-- placeholder node --></span>
       </div>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37206-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -414,6 +420,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext transition clearfix colelem" id="u35961-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u35961-2">USŁUGI</p></a>
       <a class="nonblock nontext transition clearfix colelem" id="u35967-4" href="kontakt-dach-system.html"><!-- content --><p id="u35967-2">KONTAKT</p></a>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37206-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -482,11 +489,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1151" data-content-above-spacer="1151" data-content-below-spacer="515" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1151" data-content-above-spacer="1151" data-content-below-spacer="539" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36093"><!-- column -->
      <span class="nonblock nontext MuseLinkActive museBGSize colelem placeholder" data-placeholder-for="u36093_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36102-21_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u35960_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37206-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
