--- a/kontakt-dach-system.html
+++ b/kontakt-dach-system.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Kontakt Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=409669044"/>
-  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=3779944820" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=515608576"/>
+  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=327408310" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3956889806"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=4179112804" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3850453687"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=4046539202" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -70,21 +70,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u12482-22">596-161-51-36</p>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1177" data-content-above-spacer="1177" data-content-below-spacer="407" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1177" data-content-above-spacer="1177" data-content-below-spacer="361" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext museBGSize grpelem shared_content" id="u36581" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u36581_content"><!-- content --></a>
-    <div class="clearfix grpelem shared_content" id="u36590-21" data-content-guid="u36590-21_content"><!-- content -->
-     <p id="u36590-2">ADRES</p>
-     <p id="u36590-3">&nbsp;</p>
-     <p id="u36590-5">UL. STASZICA 3C/7</p>
-     <p id="u36590-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
-     <p id="u36590-8">&nbsp;</p>
-     <p id="u36590-10">TELEFON</p>
-     <p id="u36590-11">&nbsp;</p>
-     <p id="u36590-13">516 545 989</p>
-     <p id="u36590-14">&nbsp;</p>
-     <p id="u36590-16">NIP</p>
-     <p id="u36590-17">&nbsp;</p>
-     <p id="u36590-19"><span id="u36590-18">596-161-51-36</span></p>
+    <div class="clearfix grpelem shared_content" id="pu36590-21" data-content-guid="pu36590-21_content"><!-- column -->
+     <div class="clearfix colelem shared_content" id="u36590-21" data-content-guid="u36590-21_content"><!-- content -->
+      <p id="u36590-2">ADRES</p>
+      <p id="u36590-3">&nbsp;</p>
+      <p id="u36590-5">UL. STASZICA 3C/7</p>
+      <p id="u36590-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
+      <p id="u36590-8">&nbsp;</p>
+      <p id="u36590-10">TELEFON</p>
+      <p id="u36590-11">&nbsp;</p>
+      <p id="u36590-13">516 545 989</p>
+      <p id="u36590-14">&nbsp;</p>
+      <p id="u36590-16">NIP</p>
+      <p id="u36590-17">&nbsp;</p>
+      <p id="u36590-19"><span id="u36590-18">596-161-51-36</span></p>
+     </div>
+     <div class="clearfix colelem shared_content" id="u37152-4" data-content-guid="u37152-4_content"><!-- content -->
+      <p>Design: Robert Chomiak</p>
+     </div>
     </div>
     <div class="clearfix grpelem shared_content" id="u36582" data-content-guid="u36582_content"><!-- column -->
      <a class="nonblock nontext transition clearfix colelem shared_content" id="u36583-4" href="index.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u36583-4_content"><!-- content --><p id="u36583-2">START</p></a>
@@ -111,25 +116,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="934" data-content-above-spacer="934" data-content-below-spacer="355" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="934" data-content-above-spacer="934" data-content-below-spacer="366" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36590-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36582_content"><!-- placeholder node --></span>
    </div>
   </div>
   <div class="breakpoint" id="bp_1024" data-min-width="882" data-max-width="1024"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="clearfix grpelem placeholder" data-placeholder-for="ppu24376_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="761" data-content-above-spacer="761" data-content-below-spacer="320" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="761" data-content-above-spacer="761" data-content-below-spacer="350" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36590-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36582_content"><!-- placeholder node --></span>
    </div>
   </div>
   <div class="breakpoint" id="bp_881" data-min-width="571" data-max-width="881"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="clearfix grpelem placeholder" data-placeholder-for="ppu24376_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="643" data-content-above-spacer="642" data-content-below-spacer="643" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="643" data-content-above-spacer="642" data-content-below-spacer="686" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu36581"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
@@ -145,6 +150,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <span class="nonblock nontext MuseLinkActive clearfix grpelem placeholder" data-placeholder-for="u36589-4_content"><!-- placeholder node --></span>
       </div>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37152-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -163,15 +169,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="596" data-content-above-spacer="595" data-content-below-spacer="539" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="596" data-content-above-spacer="595" data-content-below-spacer="569" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36581"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
      <div class="clearfix colelem" id="u36934"><!-- column -->
       <a class="nonblock nontext transition clearfix colelem" id="u36935-4" href="index.html"><!-- content --><p id="u36935-2">START</p></a>
       <a class="nonblock nontext transition clearfix colelem" id="u36937-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u36937-2">USŁUGI</p></a>
-      <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u36936-4" href="kontakt-dach-system.html"><!-- content --><p id="u36936-2">KONTAKT</p></a>
+      <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u36936-4" href="kontakt-dach-system.html"><!-- content --><p>KONTAKT</p></a>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37152-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -186,7 +193,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="411" data-content-above-spacer="411" data-content-below-spacer="523" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="411" data-content-above-spacer="411" data-content-below-spacer="560" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36581"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
@@ -195,6 +202,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext transition clearfix colelem" id="u37046-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u37046-2">USŁUGI</p></a>
       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u37045-4" href="kontakt-dach-system.html"><!-- content --><p id="u37045-2">KONTAKT</p></a>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37152-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
