--- a/usługi-dach-system.html
+++ b/usługi-dach-system.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "us_ugi-dach-system.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "jquery.museresponsive.js", "require.js", "musewpdisclosure.js", "us_ugi-dach-system.css"], "outOfDate":[]};
 </script>
   
   <title>Usługi Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=409669044"/>
-  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=127540248" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=515608576"/>
+  <link rel="stylesheet" type="text/css" href="css/us_ugi-dach-system.css?crc=4197097932" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3956889806"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=329794761" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3850453687"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_us_ugi-dach-system.css?crc=33553811" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix grpelem" id="ppu24376"><!-- column -->
      <div class="clearfix colelem shared_content" id="pu24376" data-content-guid="pu24376_content"><!-- group -->
       <div class="grpelem shared_content" id="u24376" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u24376_content"><!-- content --></div>
-      <a class="nonblock nontext museBGSize grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
+      <a class="nonblock nontext grpelem shared_content" id="u207" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u207_content"><!-- content --></a>
       <div class="clearfix grpelem shared_content" id="u12650" data-content-guid="u12650_content"><!-- group -->
        <a class="nonblock nontext transition clearfix grpelem" id="u235-4" href="index.html"><!-- content --><p id="u235-2">START</p></a>
        <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u245-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u245-2">USŁUGI</p></a>
@@ -188,21 +188,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="3108" data-content-above-spacer="3108" data-content-below-spacer="375" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="3108" data-content-above-spacer="3108" data-content-below-spacer="405" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext museBGSize grpelem shared_content" id="u36228" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u36228_content"><!-- content --></a>
-    <div class="clearfix grpelem shared_content" id="u36237-21" data-content-guid="u36237-21_content"><!-- content -->
-     <p id="u36237-2">ADRES</p>
-     <p id="u36237-3">&nbsp;</p>
-     <p id="u36237-5">UL. STASZICA 3C/7</p>
-     <p id="u36237-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
-     <p id="u36237-8">&nbsp;</p>
-     <p id="u36237-10">TELEFON</p>
-     <p id="u36237-11">&nbsp;</p>
-     <p id="u36237-13">516 545 989</p>
-     <p id="u36237-14">&nbsp;</p>
-     <p id="u36237-16">NIP</p>
-     <p id="u36237-17">&nbsp;</p>
-     <p id="u36237-19"><span id="u36237-18">596-161-51-36</span></p>
+    <div class="clearfix grpelem shared_content" id="pu36237-21" data-content-guid="pu36237-21_content"><!-- column -->
+     <div class="clearfix colelem shared_content" id="u36237-21" data-content-guid="u36237-21_content"><!-- content -->
+      <p id="u36237-2">ADRES</p>
+      <p id="u36237-3">&nbsp;</p>
+      <p id="u36237-5">UL. STASZICA 3C/7</p>
+      <p id="u36237-7">66-300 MIĘDZYRZECZ, LUBUSKIE, POLSKA</p>
+      <p id="u36237-8">&nbsp;</p>
+      <p id="u36237-10">TELEFON</p>
+      <p id="u36237-11">&nbsp;</p>
+      <p id="u36237-13">516 545 989</p>
+      <p id="u36237-14">&nbsp;</p>
+      <p id="u36237-16">NIP</p>
+      <p id="u36237-17">&nbsp;</p>
+      <p id="u36237-19"><span id="u36237-18">596-161-51-36</span></p>
+     </div>
+     <div class="clearfix colelem shared_content" id="u37170-4" data-content-guid="u37170-4_content"><!-- content -->
+      <p>Design: Robert Chomiak</p>
+     </div>
     </div>
     <div class="clearfix grpelem shared_content" id="u36229" data-content-guid="u36229_content"><!-- column -->
      <a class="nonblock nontext transition clearfix colelem shared_content" id="u36230-4" href="index.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedRight" data-content-guid="u36230-4_content"><!-- content --><p id="u36230-2">START</p></a>
@@ -223,7 +228,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu24376"><!-- column -->
      <div class="clearfix colelem temp_no_id" data-orig-id="pu24376"><!-- group -->
       <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
+      <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu20857_content"><!-- placeholder node --></span>
@@ -273,9 +278,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2358" data-content-above-spacer="2358" data-content-below-spacer="360" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="2358" data-content-above-spacer="2358" data-content-below-spacer="405" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36228_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36237-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36237-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36229_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -330,9 +335,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1848" data-content-above-spacer="1848" data-content-below-spacer="340" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1848" data-content-above-spacer="1848" data-content-below-spacer="379" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36228_content"><!-- placeholder node --></span>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="u36237-21_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu36237-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36229_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -342,7 +347,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem temp_no_id" data-orig-id="ptop"><!-- group -->
       <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
       <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
+      <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu20857_content"><!-- placeholder node --></span>
@@ -454,7 +459,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2406" data-content-above-spacer="2406" data-content-below-spacer="648" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="2406" data-content-above-spacer="2406" data-content-below-spacer="704" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu36228"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36228_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36237-21_content"><!-- placeholder node --></span>
@@ -470,6 +475,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <span class="nonblock nontext transition clearfix grpelem placeholder" data-placeholder-for="u36232-4_content"><!-- placeholder node --></span>
       </div>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37170-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -479,7 +485,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem temp_no_id" data-orig-id="ptop"><!-- group -->
       <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
       <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
+      <span class="nonblock nontext grpelem placeholder" data-placeholder-for="u207_content"><!-- placeholder node --></span>
       <div class="clearfix grpelem shared_content" id="u15097" data-content-guid="u15097_content"><!-- group -->
        <a class="nonblock nontext transition clearfix grpelem" id="u15098-4" href="index.html"><!-- content --><p id="u15098-2">START</p></a>
        <a class="nonblock nontext MuseLinkActive transition clearfix grpelem" id="u15100-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u15100-2">USŁUGI</p></a>
@@ -532,7 +538,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1807" data-content-above-spacer="1806" data-content-below-spacer="523" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1807" data-content-above-spacer="1806" data-content-below-spacer="578" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36228"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36228_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36237-21_content"><!-- placeholder node --></span>
@@ -541,6 +547,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u36370-4" href="us%c5%82ugi-dach-system.html"><!-- content --><p id="u36370-2">USŁUGI</p></a>
       <a class="nonblock nontext transition clearfix colelem" id="u36368-4" href="kontakt-dach-system.html"><!-- content --><p id="u36368-2">KONTAKT</p></a>
      </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37170-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
@@ -550,7 +557,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix colelem temp_no_id" data-orig-id="ptop"><!-- group -->
       <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
       <span class="grpelem placeholder" data-placeholder-for="u24376_content"><!-- placeholder node --></span>
-      <a class="nonblock nontext museBGSize grpelem temp_no_id" href="index.html" data-orig-id="u207"><!-- content --><div class="fluid_height_spacer"></div></a>
+      <a class="nonblock nontext grpelem temp_no_id" href="index.html" data-orig-id="u207"><!-- content --><div class="fluid_height_spacer"></div></a>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u15097_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu20857_content"><!-- placeholder node --></span>
@@ -599,11 +606,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1802" data-content-above-spacer="1801" data-content-below-spacer="527" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1802" data-content-above-spacer="1801" data-content-below-spacer="564" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36228"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36228_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36237-21_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36363_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u37170-4_content"><!-- placeholder node --></span>
     </div>
    </div>
   </div>
